--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="silver and gold scrap">
+  <meta name="description" content="calculate scrap silver and gold melt prices">
   <meta name="keywords" content="silver scrap, gold scrap,silver melt value, appraise silver">
   <meta name="author" content="Matthew Kreke">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
