--- a/tags.html
+++ b/tags.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="calculate scrap silver and gold melt prices">
-  <meta name="keywords" content="silver scrap calculator, gold price, silver bullion, appraise silver">
+  <meta name="keywords" content="kitco silver, gold price, silver bullion, kitco gold">
   <meta name="author" content="Matthew Kreke">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
